--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "prod": "ng build --env=prod",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
