--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "sh build-deploy.sh"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
     "node": "7.10.0"
